--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,6 +3,10 @@
 <p>
   <b>Title:</b>
   <%= @post.title %>
+	<br/>
+	<b>Published:</b>
+	<span class='pub_date'> 
+	<%= @post.created_at.to_date%></span>
 </p>
 
 <p>
@@ -17,3 +21,5 @@
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
+
+<h3>Comments</h3>
