--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,27 +2,67 @@
 <html>
 <head>
   <title>Localnews</title>
+<!--[if lt IE 9]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
+  <![endif]-->
   <%= stylesheet_link_tag    "application" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-	<div id="container">
-		<div id="user_header">
-			<% if current_user%>
-			Logged in as <%= current_user.email %>
-			<%= link_to "Log out" ,logout_path%>
-			<% else %>
-			<%= link_to "Sign up",signup_path%> or
-			<%= link_to "Login",login_path%> 
-			<% end %>
-	</div>
-
-<% flash.each do |name,msg|%>
-	<%= content_tag :div, msg , id: "flash_#{name}"%>
-	<%end%>
 	
-	<%= yield %>
+	<div class="navbar navbar-fixed-top">
+	  	<div class="navbar-inner">
+		    <div class="container">
+
+		      <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
+		      <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+		      </a>
+
+		      <!-- Be sure to leave the brand out there if you want it shown -->
+		      <a class="brand" href="#">Project name</a>
+
+		      <!-- Everything you want hidden at 940px or less, place within here -->
+		      <div class="nav-collapse">
+				<ul class="nav">
+		        <!-- .nav, .navbar-search, .navbar-form, etc -->
+				<li><%= link_to "Posts ", posts_path%></li>
+				<li><%= link_to "Most viewed "%></li>
+				<li><%= link_to "Latest "%></li>
+				<% if current_user%>
+				<li><%= link_to "Log out" ,logout_path%></li>
+				<% else %>
+				<li><%= link_to "Sign up",signup_path%></li>  
+				<li><%= link_to "Login",login_path%> </li>
+				<% end %>
+				
+
+				</ul>
+		      </div>
+		    </div>
+		  </div>
+	</div>
+	
+
+  <div class="container">
+	<% flash.each do |name,msg|%>
+		<div class = "alert alert-<%= name== :notice ? "success" : "error" %>">
+			 <a class="close" data-dismiss="alert">×</a>
+			<%= msg %>
+		</div>
+		<%end%>
+	<div class="row">
+		<div class="span9">	<%= yield %></div>
+		<div class="span3">	
+			<h2>About US</h2>
+			</div>
+	</div>
+  </div>
 </div>
 </body>
 </html>
