--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -17,3 +17,8 @@ body { padding-top: 60px; }
 //
 // Example:
 // @linkColor: #ff0000;
+
+//@navbarBackground: #dff0d8;
+//@navbarBackgroundHighlight: #d9edf7;
+//@navbarText: #3a87ad;
+@navbarLinkColor: #3a87ad;
