--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,13 +34,15 @@
 				<li><%= link_to "Posts ", posts_path%></li>
 				<li><%= link_to "New Post ",new_post_path%></li>
 				<li><%= link_to "Latest "%></li>
+				</ul>
+				<ul class = "nav pull-right">
 				<% if current_user%>
 				<li><%= link_to "Log out" ,logout_path%></li>
 				<% else %>
 				<li><%= link_to "Sign up",signup_path%></li>  
 				<li><%= link_to "Login",login_path%> </li>
 				<% end %>
-				
+					
 				</ul>
 		      </div>
 		    </div>
