--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -31,6 +31,15 @@
 	width:423px;
 	height:177px;
 }
-
+.list_comment{
+	background-color: #EEEEEE;
+    font-family: Consolas,Menlo,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New,monospace,serif;
+	margin-bottom: 10px;
+	max-height: 600px;
+	overflow: auto;
+	padding: 5px;
+	width: auto;
+	
+}
 
 	
