--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -2,7 +2,7 @@
 <% @post.comments.each do |c|%>
  <p>
     <b><%=h c.user.display_name %> said:</b><br />
-	<p><%= c.body %><p/>
+	<p class ="list_comment"><%= c.body %><p/>
     <%= time_ago_in_words(c.created_at) %> ago
   </p>
 
