updated gems and update post address but not showing proper location

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
   <%= javascript_include_tag "application" , 'rails.validations'%>
   <%= csrf_meta_tags %>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 <body>
 	
@@ -58,12 +59,13 @@
 		</div>
 		<%end%>
 	<div class="row">
-		<div class="span9">	<%= yield %></div>
-		<div class="span3">	
-			<h2>About US</h2>
+		<div class="span6">	<%= yield %></div>
+		<div class="span6">	
+			<h2></h2>
 			</div>
 	</div>
   </div>
 </div>
+<%= yield :scripts %>
 </body>
 </html>
