--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,6 +39,7 @@
 				<% else %>
 				<li><%= link_to "Sign up",signup_path%></li>  
 				<li><%= link_to "Login",login_path%> </li>
+				<li><%= link_to "Sign in Twitter","/auth/twitter"%>
 				<% end %>
 				
 
