--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,13 +37,13 @@
 				<li><%= link_to "Latest "%></li>
 				</ul>
 				<ul class = "nav pull-right">
-				<% if current_user%>
-				<li><%= link_to "Log out" ,logout_path%></li>
-				<% else %>
-				<li><%= link_to "Sign up",signup_path%></li>  
-				<li><%= link_to "Login",login_path%> </li>
-				<% end %>
-					
+					<% if user_signed_in? %>
+					  <li><%= link_to 'Edit profile', edit_user_registration_path %> </li>
+					  <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
+					<% else %>
+					<li> <%= link_to "Sign up", new_user_registration_path %> </li>
+					 <li><%= link_to "Login", new_user_session_path %></li>
+					<% end %>
 				</ul>
 		      </div>
 		    </div>
