--- a/app/views/posts/_location_fields.html.erb
+++ b/app/views/posts/_location_fields.html.erb
@@ -1,6 +1,6 @@
 <fieldset>
 	<%= f.label :address %>
-	<%= f.text_field :address,:size => "20" %> 
+	<%= f.text_field :address,:size => "20" ,:id => "searchTextField" ,:remote => true%> 
 	<%= f.label :latitude %>
 	<%= f.text_field :latitude %> 
 	<%= f.label :longitude %>
