google maps autocomplete address javascript added

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -18,7 +18,7 @@
 <p>
 	<b>Published by:</b>
 	<span class='pub_name'> 
-	<%= @post.user.display_name%></span>
+	<%#= @post.user.display_name%></span>
 </p>
 
 <p>
