--- a/app/views/posts/_location_fields.html.erb
+++ b/app/views/posts/_location_fields.html.erb
@@ -1,8 +1,81 @@
 <fieldset>
 	<%= f.label :address %>
 	<%= f.text_field :address,:size => "20" ,:id => "searchTextField" ,:remote => true%> 
-	<%= f.label :latitude %>
-	<%= f.text_field :latitude %> 
-	<%= f.label :longitude %>
-	<%= f.text_field :longitude %>
-  </fieldset>
+	<%= f.hidden_field :latitude %> 
+	<%= f.hidden_field :longitude %>
+</fieldset>
+<div id="map-canvas"></div>
+<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=places"></script>
+<script type="text/javascript">	
+
+function initialize() {
+	var mapOptions = {
+    center: new google.maps.LatLng(-33.8688, 151.2195),
+    zoom: 13,
+    mapTypeId: google.maps.MapTypeId.ROADMAP
+  };
+  var map = new google.maps.Map(document.getElementById('map-canvas'),
+    mapOptions);
+  var input = /** @type {HTMLInputElement} */(document.getElementById('searchTextField'));
+  var autocomplete = new google.maps.places.Autocomplete(input);
+  console.log(autocomplete)
+
+	var defaultBounds = new google.maps.LatLngBounds(
+	  new google.maps.LatLng(-33.8902, 151.1759),
+	  new google.maps.LatLng(-33.8474, 151.2631)
+	  );
+
+	var options = {
+	  bounds: defaultBounds,
+	  types: ['establishment'],
+	  types: ['(cities)'],
+	  componentRestrictions: {country: 'IN'}
+	};
+	google.maps.event.addListener(autocomplete, 'place_changed', function() {
+    infowindow.close();
+    marker.setVisible(false);
+    input.className = '';
+    var place = autocomplete.getPlace();
+    console.log(place)
+    if (!place.geometry) {
+      // Inform the user that the place was not found and return.
+      input.className = 'notfound';
+      return;
+    }
+    // If the place has a geometry, then present it on a map.
+    if (place.geometry.viewport) {
+      map.fitBounds(place.geometry.viewport);
+    } else {
+      map.setCenter(place.geometry.location);
+      map.setZoom(17);  // Why 17? Because it looks good.
+    }
+    marker.setIcon(/** @type {google.maps.Icon} */({
+      url: place.icon,
+      size: new google.maps.Size(71, 71),
+      origin: new google.maps.Point(0, 0),
+      anchor: new google.maps.Point(17, 34),
+      scaledSize: new google.maps.Size(35, 35)
+    }));
+    marker.setPosition(place.geometry.location);
+    marker.setVisible(true);
+
+    var address = '';
+    if (place.address_components) {
+      address = [
+        (place.address_components[0] && place.address_components[0].short_name || ''),
+        (place.address_components[1] && place.address_components[1].short_name || ''),
+        (place.address_components[2] && place.address_components[2].short_name || '')
+      ].join(' ');
+    }
+
+    infowindow.setContent('<div><strong>' + place.name + '</strong><br>' + address);
+    infowindow.open(map, marker);
+  });
+
+
+
+
+  }
+  google.maps.event.addDomListener(window, 'load', initialize);
+  
+</script>	
