added username and login option via username and email

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,7 +1,7 @@
 <div class='comments'>
 <% @post.comments.each do |c|%>
  <p>
-    <b><%=h c.user.display_name %> said:</b><br />
+    <b><%=h c.user.username %> said:</b><br />
 	<p class ="list_comment"><%= c.body %><p/>
     <%= time_ago_in_words(c.created_at) %> ago
   </p>
